Finish collaborative filtering notebook

--- a/posts/ml/fastai/lesson7/lesson.ipynb
+++ b/posts/ml/fastai/lesson7/lesson.ipynb
@@ -88,14 +88,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 68,
    "metadata": {},
    "outputs": [],
    "source": [
     "from pathlib import Path\n",
     "\n",
-    "from fastai.collab import CollabDataLoaders, Module, Embedding\n",
-    "from fastai.tabular.all import one_hot, sigmoid_range, MSELossFlat, Learner\n",
+    "from fastai.collab import CollabDataLoaders, Module, Embedding, collab_learner\n",
+    "from fastai.tabular.all import one_hot, sigmoid_range, MSELossFlat, Learner, get_emb_sz\n",
     "from matplotlib import pyplot as plt\n",
     "import numpy as np\n",
     "import pandas as pd \n",
@@ -1331,13 +1331,6 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# TODO"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
     "### 4.4. Interpreting Embeddings and Biases\n",
     "\n",
     "We can interrogate the model to learn more about these embeddings it has learned.\n",
@@ -1462,15 +1455,208 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We can also use the “embedding distance” (distance in the latent space) to see when two movies are similar. They use cosine similarity which is like Euclidean distance but normalised. \n"
+    "#### 4.4.3. Embedding Distance\n",
+    "\n",
+    "We can also use the “embedding distance” (distance in the latent space) to see when two movies are similar. We use cosine similarity to determine this distance, which is similar in principle to Euclidean distance but normalised. \n",
+    "\n",
+    "In the example below, we start with the movie *Forrest Gump* and find the closest movie to it in our embedding:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 66,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'Beautiful Mind, A (2001)'"
+      ]
+     },
+     "execution_count": 66,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "movie_idx = dls.classes['title'].o2i['Forrest Gump (1994)']\n",
+    "\n",
+    "movie_factors = learn.model.movie_factors\n",
+    "distances = torch.nn.CosineSimilarity(dim=1)(movie_factors, movie_factors[movie_idx][None])\n",
+    "closest_distance_idx = distances.argsort(descending=True)[1]\n",
+    "dls.classes['title'][closest_distance_idx]"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 5. Using Fastai's Collaborative Filter\n",
+    "## 5. Building a Collaborative Filter with Fastai's Library\n",
+    "\n",
     "We can repeat the same exercise using the collaborative filter from the fastai library to see how it compares to our from-scratch implementation."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 69,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "\n",
+       "<style>\n",
+       "    /* Turns off some styling */\n",
+       "    progress {\n",
+       "        /* gets rid of default border in Firefox and Opera. */\n",
+       "        border: none;\n",
+       "        /* Needs to be in here for Safari polyfill so background images work as expected. */\n",
+       "        background-size: auto;\n",
+       "    }\n",
+       "    progress:not([value]), progress:not([value])::-webkit-progress-bar {\n",
+       "        background: repeating-linear-gradient(45deg, #7e7e7e, #7e7e7e 10px, #5c5c5c 10px, #5c5c5c 20px);\n",
+       "    }\n",
+       "    .progress-bar-interrupted, .progress-bar-interrupted::-webkit-progress-bar {\n",
+       "        background: #F44336;\n",
+       "    }\n",
+       "</style>\n"
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       "\n",
+       "    <div>\n",
+       "      <progress value='0' class='' max='5' style='width:300px; height:20px; vertical-align: middle;'></progress>\n",
+       "      0.00% [0/5 00:00&lt;?]\n",
+       "    </div>\n",
+       "    \n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: left;\">\n",
+       "      <th>epoch</th>\n",
+       "      <th>train_loss</th>\n",
+       "      <th>valid_loss</th>\n",
+       "      <th>time</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "  </tbody>\n",
+       "</table><p>\n",
+       "\n",
+       "    <div>\n",
+       "      <progress value='5' class='' max='1260' style='width:300px; height:20px; vertical-align: middle;'></progress>\n",
+       "      0.40% [5/1260 00:00&lt;00:20 1.5528]\n",
+       "    </div>\n",
+       "    "
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "learn_fast = collab_learner(dls, n_factors=embedding_dim, y_range=(0, 5.5))\n",
+    "learn_fast.fit_one_cycle(num_epochs, max_learning_rate, wd=weight_decay)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We can repeat any of the analysis of our from-scratch model. For example, the movies with the highest bias:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 70,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['Shawshank Redemption, The (1994)',\n",
+       " 'Forrest Gump (1994)',\n",
+       " 'Green Mile, The (1999)',\n",
+       " 'Star Wars: Episode IV - A New Hope (1977)',\n",
+       " 'Dark Knight, The (2008)']"
+      ]
+     },
+     "execution_count": 70,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "movie_bias = learn_fast.model.i_bias.weight.squeeze()\n",
+    "idxs = movie_bias.argsort(descending=True)[:5]\n",
+    "[dls.classes['title'][i] for i in idxs]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 6. Bootstrapping a Collaborative Filtering Model\n",
+    "\n",
+    "How do you start off a collaborative filtering model? For example, when you first start out, you have no data on users or items.\n",
+    "\n",
+    "Or even for established companies, what happens when we have a new user or a new item, so the entire row or column is null?\n",
+    "\n",
+    "There is no hard and fast solution, they all boil down to \"use common sense\".\n",
+    "\n",
+    "- A tempting option is to fill NaNs with the *median latent vectors*. But this might result in an odd combination that doesn't exist in practice, i.e. the latent space isn't continuous so this could be where a gap in the latent space lies. For example, a medium action, medium sci-fi film with medium romance and medium comedy that is medium popular and medium critically acclaimed.\n",
+    "- Another option is to pick a user/item that is representative of the *average* taste.\n",
+    "- Create a *tabular model* using answers to a new user survey. Ask the user some questions when they sign up, then create a model where the user's embedding vector is the dependent variable and their answers, along with any other relevant signup metadata, are the independent variables.\n",
+    "\n",
+    "It is important to be careful of a small number of extremely enthusiastic users dominating the recommendations. For example, people who watch anime watch a LOT of it, and rate a lot of it highly. So this could end up getting recommended to users outside of this niche.\n",
+    "\n",
+    "This can create positive feedback loops that change the behaviour of your product in unexpected ways."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 7. Deep Learning for Collaborative Filtering\n",
+    "\n",
+    "The matrix completion approach used previously is known as **Probabilistic Matrix Factorization (PMF)**.\n",
+    "An alternative approach is to use **deep learning**.\n",
+    "\n",
+    "In practice the two approaches are often stacked in an ensemble.\n",
+    "\n",
+    "This section explores the deep learning collaborative filtering approach from scratch, then recreates it using fastai's library.\n",
+    "\n",
+    "\n",
+    "### 7.1. Building a Deep Learning Collaborative Filter From Scratch\n",
+    "We are concatenating the embedding matrices together, rather than taking the dot product, so that we can pass it through a dense ANN.\n",
+    "\n",
+    "These matrices can be different sizes, and the size of embedding to use for each depends on the number of classes in the data. Fastai has a heuristic method for this which we use here:\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 77,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "(user_num_classes, user_num_embeddings), (item_num_classes, item_num_embeddings) = get_emb_sz(dls)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We can then use this in a simple neural network with one hidden layer:"
    ]
   },
   {
@@ -1478,14 +1664,243 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "class CollabNN(Module):\n",
+    "    def __init__(self, user_embedding_size, item_embedding_size, y_range=(0, 5.5), n_activations=100):\n",
+    "        self.user_factors = Embedding(*user_embedding_size)\n",
+    "        self.item_factors = Embedding(*item_embedding_size)\n",
+    "        self.layers = torch.nn.Sequential(\n",
+    "            torch.nn.Linear(user_embedding_size[1] + item_embedding_size[1], n_activations),\n",
+    "            torch.nn.ReLU(),\n",
+    "            torch.nn.Linear(n_activations, 1))\n",
+    "        self.y_range = y_range\n",
+    "        \n",
+    "    def forward(self, x):\n",
+    "        embs = self.user_factors(x[:, 0]), self.item_factors(x[:, 1])\n",
+    "        x = self.layers(torch.cat(embs, dim=1))\n",
+    "        return sigmoid_range(x, *self.y_range)\n",
+    "    \n",
+    "collab_nn_model = CollabNN(user_embedding_size=(user_num_classes, user_num_embeddings),\n",
+    "                           item_embedding_size=(item_num_classes, item_num_embeddings))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Now train this model on the data:"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 95,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "\n",
+       "<style>\n",
+       "    /* Turns off some styling */\n",
+       "    progress {\n",
+       "        /* gets rid of default border in Firefox and Opera. */\n",
+       "        border: none;\n",
+       "        /* Needs to be in here for Safari polyfill so background images work as expected. */\n",
+       "        background-size: auto;\n",
+       "    }\n",
+       "    progress:not([value]), progress:not([value])::-webkit-progress-bar {\n",
+       "        background: repeating-linear-gradient(45deg, #7e7e7e, #7e7e7e 10px, #5c5c5c 10px, #5c5c5c 20px);\n",
+       "    }\n",
+       "    .progress-bar-interrupted, .progress-bar-interrupted::-webkit-progress-bar {\n",
+       "        background: #F44336;\n",
+       "    }\n",
+       "</style>\n"
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: left;\">\n",
+       "      <th>epoch</th>\n",
+       "      <th>train_loss</th>\n",
+       "      <th>valid_loss</th>\n",
+       "      <th>time</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <td>0</td>\n",
+       "      <td>0.799004</td>\n",
+       "      <td>0.792579</td>\n",
+       "      <td>00:10</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>1</td>\n",
+       "      <td>0.747623</td>\n",
+       "      <td>0.755708</td>\n",
+       "      <td>00:10</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>2</td>\n",
+       "      <td>0.706981</td>\n",
+       "      <td>0.723887</td>\n",
+       "      <td>00:10</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>3</td>\n",
+       "      <td>0.650337</td>\n",
+       "      <td>0.719642</td>\n",
+       "      <td>00:10</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>4</td>\n",
+       "      <td>0.569418</td>\n",
+       "      <td>0.734302</td>\n",
+       "      <td>00:10</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>"
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "learn_nn = Learner(dls, collab_nn_model, loss_func=MSELossFlat())\n",
+    "learn_nn.fit_one_cycle(num_epochs, max_learning_rate, wd=weight_decay)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 7.2. Building a Deep Learning Collaborative Filter with Fastai's Library\n",
+    "\n",
+    "We can repeat the same exercise using fastai's implementation.\n",
+    "\n",
+    "This is almost identical to the PMF approach, simply with an additional argument `use_nn=True`."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 96,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "\n",
+       "<style>\n",
+       "    /* Turns off some styling */\n",
+       "    progress {\n",
+       "        /* gets rid of default border in Firefox and Opera. */\n",
+       "        border: none;\n",
+       "        /* Needs to be in here for Safari polyfill so background images work as expected. */\n",
+       "        background-size: auto;\n",
+       "    }\n",
+       "    progress:not([value]), progress:not([value])::-webkit-progress-bar {\n",
+       "        background: repeating-linear-gradient(45deg, #7e7e7e, #7e7e7e 10px, #5c5c5c 10px, #5c5c5c 20px);\n",
+       "    }\n",
+       "    .progress-bar-interrupted, .progress-bar-interrupted::-webkit-progress-bar {\n",
+       "        background: #F44336;\n",
+       "    }\n",
+       "</style>\n"
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: left;\">\n",
+       "      <th>epoch</th>\n",
+       "      <th>train_loss</th>\n",
+       "      <th>valid_loss</th>\n",
+       "      <th>time</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <td>0</td>\n",
+       "      <td>0.838047</td>\n",
+       "      <td>0.801519</td>\n",
+       "      <td>00:14</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>1</td>\n",
+       "      <td>0.761085</td>\n",
+       "      <td>0.744033</td>\n",
+       "      <td>00:12</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>2</td>\n",
+       "      <td>0.709788</td>\n",
+       "      <td>0.734091</td>\n",
+       "      <td>00:13</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>3</td>\n",
+       "      <td>0.653415</td>\n",
+       "      <td>0.728950</td>\n",
+       "      <td>00:13</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>4</td>\n",
+       "      <td>0.545074</td>\n",
+       "      <td>0.743957</td>\n",
+       "      <td>00:12</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>"
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "learn_nn_fast = collab_learner(dls, use_nn=True, y_range=(0, 5.5), layers=[100, 50])\n",
+    "learn_nn_fast.fit_one_cycle(num_epochs, max_learning_rate, wd=weight_decay)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 8. Summary\n",
+    "\n",
+    "The recommender problem is one where we have some users and their ratings of some items. We want to know which unseen items a user may like.\n",
+    "\n",
+    "We implemented two approaches to collaborative filtering:\n",
+    "\n",
+    "1. Probabilistic Matrix Factorization (PMF)\n",
+    "2. A neural network\n",
+    "\n",
+    "For each approach, we build a model from scratch in Pytorch, then compared that with fastai's implementation. For the PMF approach, we even gained some intuition by creating a spreadsheet implementation first!\n",
+    "\n",
+    "In practice, both approaches can be stacked for improved recommendations."
+   ]
   },
   {
    "cell_type": "markdown",
