Add outline of React notes

--- a/posts/ml/fastai/lesson7/lesson.ipynb
+++ b/posts/ml/fastai/lesson7/lesson.ipynb
@@ -1899,7 +1899,10 @@
     "\n",
     "For each approach, we build a model from scratch in Pytorch, then compared that with fastai's implementation. For the PMF approach, we even gained some intuition by creating a spreadsheet implementation first!\n",
     "\n",
-    "In practice, both approaches can be stacked for improved recommendations."
+    "In practice, both approaches can be stacked for improved recommendations.\n",
+    "\n",
+    "The idea we explored here of user some (initially random) **embeddings** to represent an entity and then letting our model learn them is a powerful one and it is not limited to collaborative learning.\n",
+    "NLP uses embeddings to represent each unique token (i.e. each word with word-level tokenisation). It can then understand relationships between similar words, much like we were able to use embedding distances to identify similar movies.\n"
    ]
   },
   {
