Finish notes for lesson 8

--- a/posts/ml/fastai/lesson8/lesson.ipynb
+++ b/posts/ml/fastai/lesson8/lesson.ipynb
@@ -81,7 +81,19 @@
     "\n",
     "Convolutions can be reframed in different ways, as matrix multiplications or as systems of linear equations.\n",
     "\n",
-    "[This article](https://medium.com/impactai/cnns-from-different-viewpoints-fab7f52d159c) is a a helpful exploration of the topic.\n"
+    "[This article](https://medium.com/impactai/cnns-from-different-viewpoints-fab7f52d159c) is a a helpful exploration of the topic.\n",
+    "\n",
+    "\n",
+    "## 3. Assorted Thoughts From Jeremy\n",
+    "A summary of questions to end the course.\n",
+    "\n",
+    "- Read [Meta Learning](https://rosmulski.gumroad.com/l/learn_machine_learning/blog).\n",
+    "- Don't try to know everything. Pick a bit that you're interested and dig in. You'll start to recognise the same ideas cropping up with slight tweaks.\n",
+    "- Does success in deep learning boil down to more compute power? No, we can be smarter about our approach. Also pick your problems to be ones that you can actually manage with smaller compute resources.\n",
+    "- Dragonbox Algebra 5+ can teach little kids algebra.\n",
+    "- Turning a model into a startup. The key to a legitimate business venture is to solve a legitimate problem, and one that people will pay you to solve. Start with the problem, not the prototype. The LEan Startup by Eric Ries: create the MVP as quick as possible (and fake the solution) then gradually make it \"less fake\" as more people use it (and pay you).\n",
+    "- Make the things you want to do easier, then you'll want to do them more.\n",
+    "\n"
    ]
   },
   {
@@ -91,8 +103,7 @@
     "\n",
     "## References\n",
     "- [Course lesson page](https://course.fast.ai/Lessons/lesson8.html)\n",
-    "- [Neural Networks and Deep Learning](http://neuralnetworksanddeeplearning.com/)\n",
-    "- [Convolutions From Different Viewpoints](https://medium.com/impactai/cnns-from-different-viewpoints-fab7f52d159c)\n"
+    "- [Meta Learning](https://rosmulski.gumroad.com/l/learn_machine_learning/blog)\n"
    ]
   },
   {
