--- a/posts/software/react/chapter1.qmd
+++ b/posts/software/react/chapter1.qmd
@@ -4,7 +4,7 @@ description: "React Complete Guide: Section 1"
 date: "2024-03-04"
 image: "react.png"
 categories: [Engineering, Software, React, WebDev]
-# draft: true
+draft: true
 ---
 
 # React
