Add VAE part 2 notebook as draft

--- a/posts/ml/generative_deep_learning/lesson3/chapter3.ipynb
+++ b/posts/ml/generative_deep_learning/lesson3/chapter3.ipynb
@@ -9,7 +9,7 @@
     "description: \"Variational Autoencoders\"\n",
     "date: \"2024-03-06\"\n",
     "# image: \"deep_learning_model.png\"\n",
-    "categories: [AI, Engineering, GenerativeAI]\n",
+    "categories: [AI, Engineering, GenerativeAI, VAE]\n",
     "format:\n",
     "  html:\n",
     "    code-fold: true\n",
